fix layout issues

--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -11,6 +11,7 @@ html, body {
     height:100%;
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
 }
 
 .logo {
@@ -161,6 +162,7 @@ button.search-button {
 md-list.search-results {
     background-color: rgba(79, 83, 86,0.3);
     margin-bottom: 15px;
+    border-bottom: 1px solid rgb(79,83,86);
 }
 
 .search-results md-list-item:nth-child(2n+1) {
@@ -176,4 +178,9 @@ md-list-item.md-no-proxy {width: 70%;margin-left: 10%;padding-left: 2px;padding-
 span.title.ng-scope {
     text-transform: uppercase;
     margin-left: 10%;
+}
+
+.main.ng-scope {
+    overflow: auto;
+    height: calc(100% - 64px);
 }
